src/objects/Loan_Management__c.object
<CustomObject>
    <fields>
        <fullName>Action1__c</fullName>
        <label>Action1</label>
        <picklist>
            <picklistValues>
                <fullName>Refer case</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Restructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action2__c</fullName>
        <label>Action2</label>
        <picklist>
            <picklistValues>
                <fullName>Refer case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Restructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action3__c</fullName>
        <label>Action3</label>
        <picklist>
            <picklistValues>
                <fullName>Refer case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Restructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow_Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to1__c</fullName>
        <label>Assigned to1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to2__c</fullName>
        <label>Assigned to2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to3__c</fullName>
        <label>Assigned to3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Period__c</fullName>
        <label>Cancellation Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges_waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charges waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Days__c</fullName>
        <description>Used to determine when the loan status should be changed to &apos;Completed&apos;</description>
        <label>Completion Days</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentary_Stamp_Tax__c</fullName>
        <label>Documentary Stamp Tax</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_payment_method__c</fullName>
        <label>Fee payment method</label>
        <picklist>
            <picklistValues>
                <fullName>On the next day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At the end</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Pool__c</fullName>
        <label>Funding Pool</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_period__c</fullName>
        <label>Grace period</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Cancellation_Amount__c</fullName>
        <label>Loan Cancellation Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Cancellation_Fixed__c</fullName>
        <label>Loan Cancellation Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Cancellation_Minimum__c</fullName>
        <label>Loan Cancellation Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Early_Payoff_Amount__c</fullName>
        <label>Loan Early Payoff Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Early_Payoff_Fixed__c</fullName>
        <label>Loan Early Payoff Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Early_Payoff_Minimum__c</fullName>
        <label>Loan Early Payoff Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Restructure_Amount__c</fullName>
        <label>Loan Restructure Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Restructure_Fixed__c</fullName>
        <label>Loan Restructure Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Restructure_Minimum__c</fullName>
        <label>Loan Restructure Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Repayment_Handling_Amount__c</fullName>
        <label>Manual Repayment Handling Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_Repayment_Handling_Fixed__c</fullName>
        <label>Manual Repayment Handling Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Repayment_Handling_Minimum__c</fullName>
        <label>Manual Repayment Handling Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_number_of_payment_holidays__c</fullName>
        <label>Max number of payment holidays</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_payment_holiday_duration__c</fullName>
        <label>Max payment holiday duration</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_principal_repaid__c</fullName>
        <label>Min principal repaid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_of_principal_repaid__c</fullName>
        <label>Minimum % Of Principal Repaid</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notification_days__c</fullName>
        <label>Notification days</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Bounce_Backs2__c</fullName>
        <label>Num of Bounce Backs2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Bounce_Backs3__c</fullName>
        <label>Num of Bounce Backs3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Bounce_Backs__c</fullName>
        <label>Num of Bounce Backs1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Amount__c</fullName>
        <label>Origination Fee Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Fixed__c</fullName>
        <label>Origination Fee Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Minimum__c</fullName>
        <label>Origination Fee Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name_URL__c</fullName>
        <formula>HYPERLINK(&apos;/?sort=&apos; &amp; Program_Product_ASO__r.Product__r.Product_Name__c,&apos;&apos;,&apos;_self&apos;) &amp; 
HYPERLINK(&apos;/apex/Loan_Product?id=&apos;+Program_Product_ASO__r.Product__c, Program_Product_ASO__r.Product__r.Product_Name__c ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Program_Product_ASO__r.Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>HYPERLINK(&apos;/?sort=&apos; &amp; Program_Product_ASO__r.Program__r.Name,&apos;&apos;,&apos;_self&apos;) &amp; 
HYPERLINK(&apos;/apex/Loan_RulesEngine?ID=&apos;+Program_Product_ASO__c, Program_Product_ASO__r.Program__r.Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <label>Program Product ASO</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipName>Loan_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Program_Product_ASO__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_method__c</fullName>
        <label>Repayment method</label>
        <picklist>
            <picklistValues>
                <fullName>Add to the end of the term</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spread across existing term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to the next day of the term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reversal_Fee_Amount__c</fullName>
        <label>Reversal Fee Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reversal_Fee_Fixed__c</fullName>
        <label>Reversal Fee Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversal_Fee_Minimum__c</fullName>
        <label>Reversal Fee Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Level_Limit__c</fullName>
        <label>Second Level Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Level_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Level Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rules_Engines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Person_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Person Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_ups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top-ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Added_Tax__c</fullName>
        <label>Value Added Tax</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wire_Transfer_Handling_Fee_Amount__c</fullName>
        <label>Wire Transfer Handling Fee Amount</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wire_Transfer_Handling_Fee_Fixed__c</fullName>
        <label>Wire Transfer Handling Fee Fixed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wire_Transfer_Handling_Fee_Minimum__c</fullName>
        <label>Wire Transfer Handling Fee Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rules Engine</label>
    <listViews>
        <fullName>All_Rules_Engine</fullName>
        <columns>Program_Name__c</columns>
        <columns>Product_Name_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules Engine</label>
    </listViews>
    <nameField>
        <displayFormat>LM-{000}</displayFormat>
        <label>Loan Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Engines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>